Update `openapi.json`.
